# datafusion-async-parquet-index

./: README.md
sqlx-sqlite/: Cargo.toml  README.md  index.db
sqlx-sqlite/src/: conversions.rs  index.rs  main.rs  rewrite.rs
